<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_menu_logo"
        android:src="@drawable/piggybank_logo"
        app:layout_constraintBottom_toTopOf="@id/menuTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/menuTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_font_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toTopOf="@id/chooseLabel"
        />

    <TextView
        android:id="@+id/chooseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/smallText"
        android:text="@string/menuChooseLabel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuTitle"
        app:layout_constraintBottom_toTopOf="@id/movementsButton"
        />

    <Button
        android:id="@+id/movementsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:background="@drawable/border_button"
        android:text="@string/movementsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseLabel"
        app:layout_constraintBottom_toTopOf="@id/paymentButton"/>

    <Button
        android:id="@+id/paymentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:background="@drawable/border_button"
        android:text="@string/paymentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movementsButton"
        app:layout_constraintBottom_toTopOf="@id/sendButton"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:background="@drawable/border_button"
        android:text="@string/sendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentButton"
        app:layout_constraintBottom_toTopOf="@id/obligationsButton"/>

    <Button
        android:id="@+id/obligationsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:background="@drawable/border_button"
        android:text="@string/obligationsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendButton"
        app:layout_constraintBottom_toTopOf="@id/safeButton"/>


    <Button
        android:id="@+id/safeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:background="@drawable/border_button"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:text="@string/safeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/obligationsButton"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>
