<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_top_menu_title"
        android:src="@drawable/expense_logo"
        app:layout_constraintBottom_toTopOf="@id/regExpenseTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regExpenseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/regExpenseTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_font_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/putData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:text="@string/putData"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_font_size"

        app:layout_constraintBottom_toTopOf="@id/expenseMount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regExpenseTitle" />

    <EditText
        android:id="@+id/expenseMount"
        android:layout_width="@dimen/editText_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/normal_margin"
        android:backgroundTint="@color/piggybank_blue"
        android:hint="@string/mount"
        app:layout_constraintBottom_toTopOf="@id/expenseConcept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/putData" />

    <EditText
        android:id="@+id/expenseConcept"
        android:layout_width="@dimen/editText_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/normal_margin"
        android:backgroundTint="@color/piggybank_blue"
        android:hint="@string/concept"
        app:layout_constraintBottom_toTopOf="@id/addExpense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenseMount" />


    <Button
        android:id="@+id/addExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:background="@drawable/border_button"
        android:text="@string/addExpense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenseConcept" />


</androidx.constraintlayout.widget.ConstraintLayout>
