<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/paymentsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:text="@string/paymentsTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_font_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/chooseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:text="@string/chooseLabel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_font_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentsTitle"
        app:layout_constraintBottom_toTopOf="@id/makePaymentButton"
        />

    <Button
        android:id="@+id/makePaymentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:text="@string/makePaymentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseLabel"
        app:layout_constraintBottom_toTopOf="@id/paymentsHistory"/>

    <Button
        android:id="@+id/paymentsHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:text="@string/paymentsHistoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/makePaymentButton"
        />





</androidx.constraintlayout.widget.ConstraintLayout>
