<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:text="@string/welcomeTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_font_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/registrationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:text="@string/loginLabel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_font_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintBottom_toTopOf="@id/mailEditText"
        />


    <EditText
        android:id="@+id/mailEditText"
        android:layout_width="@dimen/editText_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:hint="@string/Correo"
        app:layout_constraintBottom_toTopOf="@id/passEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationLabel" />

    <EditText
        android:id="@+id/passEditText"
        android:layout_width="@dimen/editText_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"

        android:hint="@string/Contrasena"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/mailEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:text="@string/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passEditText"
        app:layout_constraintBottom_toTopOf="@id/toRegisterButton"/>

    <Button
        android:id="@+id/toRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_elements_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:text="@string/toRegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
