<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logosendmoney"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_top_menu_title"
        android:src="@drawable/sendmoney_logo"
        app:layout_constraintBottom_toTopOf="@id/sendMoneyTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/sendMoneyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:text="@string/sendMoneyTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_font_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logosendmoney"
        />

    <TextView
        android:id="@+id/chooseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:text="@string/chooseLabel"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_font_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendMoneyTitle"
        app:layout_constraintBottom_toTopOf="@id/sendMoneyButton"
        />

    <Button
        android:id="@+id/sendMoneyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:text="@string/piggybankSendButton"
        android:background="@drawable/border_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseLabel"
        app:layout_constraintBottom_toTopOf="@id/sendingHistory"/>

    <Button
        android:id="@+id/sendingHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:width="@dimen/buttons_width"
        android:height="@dimen/buttons_height"
        android:text="@string/sendingHistoryButton"
        android:background="@drawable/border_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>
